[project]
name = "markdown-converter"
version = "1.0.0"
description = "A simple CLI tool to convert DOCX documents to Markdown using docling"
readme = "spec.md"
requires-python = ">=3.9"
dependencies = [
    "docling>=2.0.0",
]

[project.scripts]
convert-docx = "convert_docx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
